(library
 (name            xxh)
 (public_name     xxh)
 (libraries       stdint base_bigstring)
 (foreign_stubs
  (language c)
  (names xxh_stubs))
 (flags (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ./config/discover.exe)))
